# catppuccin-api

./: Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
.github/workflows/: fly-deploy.yml
examples/: index.ts
src/: main.rs
src/models/: categories.rs  mod.rs  ports.rs  shared.rs  userstyles.rs
