[package]
name = "catppuccin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
